syntax = "proto3";

package ticket;

option go_package = "./ticket";

message User {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message PurchaseRequest {
    string from = 1;
    string to = 2;
    User user = 3;
    int32 price_paid = 4;
}

message ReceiptRequest {
    string email = 1;
}

message TicketReceipt {
    string from = 1;
    string to = 2;
    User user = 3;
    int32 price_paid = 4;
    string seat = 5;
}

message SectionRequest {
    string section = 1;
}

message UserWithSeat {
    User user = 1;
    string seat = 2;
}

message UsersInSection {
    repeated UserWithSeat users = 1;
}

message RemoveUserRequest {
    string email = 1;
}

message RemoveUserResponse {
    bool success = 1;
}

message ModifySeatRequest {
    string email = 1;
    string new_seat = 2;
}

message ModifySeatResponse {
    bool success = 1;
    string message = 2;
}

service TicketService {
    rpc PurchaseTicket(PurchaseRequest) returns (TicketReceipt);
    rpc GetTicketReceipt(ReceiptRequest) returns (TicketReceipt);
    rpc ViewUsersInSection(SectionRequest) returns (UsersInSection);
    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);
    rpc ModifySeat(ModifySeatRequest) returns (ModifySeatResponse);
}
